--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,13 +1,33 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Погода</title>
-    </head>
-    <body>
-        <h1>Введите название города:</h1>
-        <form method="post" action="/weather?={{city}}">
-            <input type="text" name="city">
-            <button type="submit">Получить погоду</button>
-        </form>
-    </body>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Узнать погоду</title>
+<script>
+async function getWeather() {
+const city = document.getElementById("city").value;
+const response = await fetch("/weather/", {
+method: "POST",
+headers: {
+"Content-Type": "application/json"
+},
+body: JSON.stringify({ city_data: city })
+});
+if (response.ok) {
+const data = await response.text();
+document.getElementById("result").innerHTML = data;
+} else {
+const error = await response.json();
+document.getElementById("result").innerText = `Ошибка: ${error.message}`;
+}
+}
+</script>
+</head>
+<body>
+<h1>Weather App</h1>
+<input type="text" id="city" placeholder="Название города">
+<button onclick="getWeather()">Прогноз</button>
+<div id="result"></div>
+</body>
 </html>
